@@ -1,0 +1,1 @@
+--skip-stack-trace --skip-core-file
