@@ -1,3 +1,7 @@
+2010-09-06	The InnoDB Team
+	* dict/dict0load.c, innodb_bug53756.test innodb_bug53756.result
+	Fix Bug #53756 	ALTER TABLE ADD PRIMARY KEY affects crash recovery
+
 2010-08-24	The InnoDB Team
 
 	* handler/ha_innodb.c, dict/dict0dict.c:
